--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +23,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Agenda</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="#faq">FAQ</a></li>
                 <li><a href="#">Our Sponsor</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
@@ -25,11 +31,93 @@
         </nav>
      </header>
 
-
-     <!-- Continue Here -->
-
+     <!-- ================= Hero section ================= -->
 
 
+     <!-- ================= About section ================= -->
 
+
+
+     <!-- ================= Agenda section ================= -->
+
+
+
+
+
+     <!-- ================= FAQ section =================  -->
+     <section id="faq">
+        <div class="faq-title">
+            <p>FAQ</p>
+        </div>
+        <div class="faq-container">
+            <div class="qstn 1">
+                <div class="question">
+                <p class="qst">1.what is retro reborn hackathon ?</p>
+                <div class="reveal">
+                    <img src="images/Vector.png">
+                </div>
+                </div>
+                <p class="answer"></p>
+
+            </div>
+            <div class="qstn 2">
+                <div class="question">
+                <p class="qst">2.What is the composition of teams  in Retro reborn hackathon ?</p>
+                <div class="reveal">
+                    <img src="images/Vector.png">
+                </div>
+                </div>
+                <p class="answer active">Each team combines the skills of developers, designers, and AI innovators, working hand in hand to breathe new life into vintage titles. Developers focus on game mechanics, responsiveness, and architecture; designers craft nostalgic yet modern interfaces; while AI experts integrate intelligent behaviors from adaptive enemies and smart NPCs to procedural level generation.</p>
+            </div>
+            <div class="qstn 3">
+                <div class="question">
+                <p class="qst">3.Are there workshops and mentoring ?</p>
+                <div class="reveal">
+                    <img src="images/Vector.png">
+                </div>
+                </div>
+                <p class="answer"></p>
+            </div>
+            <div class="qstn 4">
+                <div class="question">
+                <p class="qst">4.How does the competition work ?</p>
+                <div class="reveal">
+                    <img src="images/Vector.png">
+                </div>
+                </div>
+                <p class="answer"></p>
+            </div>
+            <div class="qstn 5">
+                <div class="question">
+                <p class="qst">5.who can participate in retro reborn hackathon ?</p>
+                <div class="reveal">
+                    <img src="images/Vector.png">
+                </div>
+                </div>
+                <p class="answer"></p>
+            </div>
+            <div class="qstn 6">
+                <div class="question">
+                <p class="qst">6.how do i participate in retro reborn hackathon</p>
+                <div class="reveal">
+                    <img src="images/Vector.png">
+                </div>
+                </div>
+                <p class="answer"></p>
+            </div>
+
+        </div>
+     </section>
+     <!-- ================= Sponsors section ================= -->
+
+
+
+     <!-- ================= Contact Us section section ================= -->
+
+
+
+
+
+     <script src="script.js"></script>
 </body>
 </html>
