--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -23,101 +17,50 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Agenda</a></li>
-                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#">FAQ</a></li>
                 <li><a href="#">Our Sponsor</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
             <a href="#" class="registerbtn">Register Now</a>
         </nav>
      </header>
+     <div class="container">
 
-     <!-- ================= Hero section ================= -->
-
-
-     <!-- ================= About section ================= -->
-
-
-
-     <!-- ================= Agenda section ================= -->
+   
+<h1 class="section-title">For More Questions About</h1>
+ 
 
 
+ <div class="box">
+    
+     <img src="C:\Users\Hp\ESMS-projet-\images\logo.png" alt="kiko" >
+    <img src="C:\Users\Hp\ESMS-projet-\images\background.png" alt="Une belle image">
+    <img src="c:\Users\Hp\Downloads\csee logo png-02.png" alt="cse logo">
+    <h1>Contact Us</h1>
+ <p> <span class="blanc">by email</span>
+<span class="orange">cse@esi.dz</span> 
+</p>
+<p>or on social media</p>
 
+    <img src="c:\Users\Hp\Downloads\social-media.png" alt="facebook" style="cursor: pointer; display: inline-block;" >
+<img src="c:\Users\Hp\Downloads\social-media (1).png" alt="insta" style="cursor: pointer; display: inline-block;">
+<img src="c:\Users\Hp\Downloads\social-media (2).png" alt="twiter" style="cursor: pointer; display: inline-block;">
+   <img src="c:\Users\Hp\Downloads\social-media (3).png" alt="ytb" style="cursor: pointer; display: inline-block;">
+   <img src="c:\Users\Hp\Downloads\social-media (4).png" alt="linkdin" style="cursor: pointer; display: inline-block;">
+ </div>
 
-
-     <!-- ================= FAQ section =================  -->
-     <section id="faq">
-        <div class="faq-title">
-            <p>FAQ</p>
-        </div>
-        <div class="faq-container">
-            <div class="qstn 1">
-                <div class="question">
-                <p class="qst">1.what is retro reborn hackathon ?</p>
-                <div class="reveal">
-                    <img src="images/Vector.png">
-                </div>
-                </div>
-                <p class="answer"></p>
-
-            </div>
-            <div class="qstn 2">
-                <div class="question">
-                <p class="qst">2.What is the composition of teams  in Retro reborn hackathon ?</p>
-                <div class="reveal">
-                    <img src="images/Vector.png">
-                </div>
-                </div>
-                <p class="answer active">Each team combines the skills of developers, designers, and AI innovators, working hand in hand to breathe new life into vintage titles. Developers focus on game mechanics, responsiveness, and architecture; designers craft nostalgic yet modern interfaces; while AI experts integrate intelligent behaviors from adaptive enemies and smart NPCs to procedural level generation.</p>
-            </div>
-            <div class="qstn 3">
-                <div class="question">
-                <p class="qst">3.Are there workshops and mentoring ?</p>
-                <div class="reveal">
-                    <img src="images/Vector.png">
-                </div>
-                </div>
-                <p class="answer"></p>
-            </div>
-            <div class="qstn 4">
-                <div class="question">
-                <p class="qst">4.How does the competition work ?</p>
-                <div class="reveal">
-                    <img src="images/Vector.png">
-                </div>
-                </div>
-                <p class="answer"></p>
-            </div>
-            <div class="qstn 5">
-                <div class="question">
-                <p class="qst">5.who can participate in retro reborn hackathon ?</p>
-                <div class="reveal">
-                    <img src="images/Vector.png">
-                </div>
-                </div>
-                <p class="answer"></p>
-            </div>
-            <div class="qstn 6">
-                <div class="question">
-                <p class="qst">6.how do i participate in retro reborn hackathon</p>
-                <div class="reveal">
-                    <img src="images/Vector.png">
-                </div>
-                </div>
-                <p class="answer"></p>
-            </div>
-
-        </div>
-     </section>
-     <!-- ================= Sponsors section ================= -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 
 
-     <!-- ================= Contact Us section section ================= -->
+    
+
+
+</div>
 
 
 
-
-
-     <script src="script.js"></script>
 </body>
 </html>
