fixing some stuff

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
      <!-- ================= FAQ section =================  -->
      <section id="faq">
-        <div class="faq-title">
+        <div class="faq-title titlee">
             <p>FAQ</p>
         </div>
         <div class="faq-container">
@@ -57,7 +57,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">Retro Reborn Hackathon is a three-day creative programming event for developers, designers, and AI enthusiasts, focused on reinventing classic 90s games using modern technology.</p>
 
             </div>
             <div class="qstn 2">
@@ -76,7 +76,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">Yes. Technical workshops and expert mentoring sessions are provided to support teams throughout the hackathon.</p>
             </div>
             <div class="qstn 4">
                 <div class="question">
@@ -85,7 +85,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">The competition runs over three days: team formation, prototype development, workshops, mentor feedback, and final presentations to the jury, concluding with an awards ceremony.</p>
             </div>
             <div class="qstn 5">
                 <div class="question">
@@ -94,7 +94,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">Participation is open to anyone interested in programming, game design, development, or AI, regardless of their level of experience.</p>
             </div>
             <div class="qstn 6">
                 <div class="question">
@@ -103,17 +103,68 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">You can register directly through the **form available on this website**, and participants will receive all the necessary details for the hackathon.</p>
             </div>
 
         </div>
      </section>
      <!-- ================= Sponsors section ================= -->
-
+    <section id="sponsors">
+        <div class="sponsor-title titlee">
+            <p>Sponsored by</p>
+        </div>
+        <div class="sponsor-container">
+            <div class="sponsor-carousel">
+                <div class="line1">
+                    <div class="card-sponsor">
+                        <img src="images/djezzy.png" alt="" class="sp">
+                    </div>
+                    <div class="card-sponsor">
+                        <img src="images/ooredoo.png" alt="" class="sp">
+                    </div>
+                    <div class="card-sponsor">
+                        <img src="images/yalidine.png" alt="" class="sp">
+                    </div>
+                    <div class="card-sponsor">
+                        <img src="images/yassir.png" class="sp">
+                    </div>
+                </div>
+            </div>
+            <div class="line2">
+                <img  src="images/lionstudio.png" class="sp">
+                <img src="images/gomycode.png" class="sp">
+                <img src="images/Xseries.png" class="sp">   
+            </div>
+            <div class="line3">
+                <img src="images/rifkus.png" class="sp">
+                <img src="images/rouiba.png" class="sp">
+            </div>
+        </div>
+    </section>
 
 
      <!-- ================= Contact Us section section ================= -->
+    <h1 class="section-title">For More Questions About</h1>
+ 
 
+
+ <div class="box">
+    
+    <img src="images/logo.png" alt="kiko" >
+    <img src="images/background.png" alt="Une belle image">
+    <img src="images/logo (1).png" alt="cse logo">
+    <h1>Contact Us</h1>
+ <p> <span class="blanc">by email</span>
+<span class="orange">cse@esi.dz</span> 
+</p>
+<p>or on social media</p>
+
+    <img src="images/social-media (4).png" alt="facebook" style="cursor: pointer; display: inline-block;" >
+<img src="images/social-media.png" alt="insta" style="cursor: pointer; display: inline-block;">
+<img src="images/social-media (1).png" alt="twiter" style="cursor: pointer; display: inline-block;">
+   <img src="images/social-media (2).png" alt="ytb" style="cursor: pointer; display: inline-block;">
+   <img src="images/social-media (3).png" alt="linkdin" style="cursor: pointer; display: inline-block;">
+ </div>
 
 
 
