--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,12 +22,12 @@
         <nav>
             <a href="#"><img src="images/logo.png"></a>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#hero">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Agenda</a></li>
                 <li><a href="#faq">FAQ</a></li>
-                <li><a href="#">Our Sponsor</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#sponsors">Our Sponsor</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
             <a href="#" class="registerbtn">Register Now</a>
         </nav>
@@ -92,7 +91,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">Retro Reborn Hackathon is a three-day creative programming event for developers, designers, and AI enthusiasts, focused on reinventing classic 90s games using modern technology.</p>
 
             </div>
             <div class="qstn 2">
@@ -102,7 +101,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer active">Each team combines the skills of developers, designers, and AI innovators, working hand in hand to breathe new life into vintage titles. Developers focus on game mechanics, responsiveness, and architecture; designers craft nostalgic yet modern interfaces; while AI experts integrate intelligent behaviors from adaptive enemies and smart NPCs to procedural level generation.</p>
+                <p class="answer">Each team combines the skills of developers, designers, and AI innovators, working hand in hand to breathe new life into vintage titles. Developers focus on game mechanics, responsiveness, and architecture; designers craft nostalgic yet modern interfaces; while AI experts integrate intelligent behaviors from adaptive enemies and smart NPCs to procedural level generation.</p>
             </div>
             <div class="qstn 3">
                 <div class="question">
@@ -111,7 +110,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">Yes. Technical workshops and expert mentoring sessions are provided to support teams throughout the hackathon.</p>
             </div>
             <div class="qstn 4">
                 <div class="question">
@@ -120,7 +119,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">The competition runs over three days: team formation, prototype development, workshops, mentor feedback, and final presentations to the jury, concluding with an awards ceremony.</p>
             </div>
             <div class="qstn 5">
                 <div class="question">
@@ -129,7 +128,7 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">Participation is open to anyone interested in programming, game design, development, or AI, regardless of their level of experience.</p>
             </div>
             <div class="qstn 6">
                 <div class="question">
@@ -138,88 +137,72 @@
                     <img src="images/Vector.png">
                 </div>
                 </div>
-                <p class="answer"></p>
+                <p class="answer">You can register directly through the **form available on this website**, and participants will receive all the necessary details for the hackathon.</p>
             </div>
 
         </div>
      </section>
      <!-- ================= Sponsors section ================= -->
-
+    <section id="sponsors">
+        <div class="sponsor-title titlee">
+            <p>Sponsored by</p>
+        </div>
+        <div class="sponsor-container">
+            <div class="sponsor-carousel">
+                <div class="line1">
+                    <div class="card-sponsor">
+                        <img src="images/djezzy.png" alt="" class="sp">
+                    </div>
+                    <div class="card-sponsor">
+                        <img src="images/ooredoo.png" alt="" class="sp">
+                    </div>
+                    <div class="card-sponsor">
+                        <img src="images/yalidine.png" alt="" class="sp">
+                    </div>
+                    <div class="card-sponsor">
+                        <img src="images/yassir.png" class="sp">
+                    </div>
+                </div>
+            </div>
+            <div class="line2">
+                <img  src="images/lionstudio.png" class="sp">
+                <img src="images/gomycode.png" class="sp">
+                <img src="images/Xseries.png" class="sp">   
+            </div>
+            <div class="line3">
+                <img src="images/rifkus.png" class="sp">
+                <img src="images/rouiba.png" class="sp">
+            </div>
+        </div>
+    </section>
 
 
      <!-- ================= Contact Us section section ================= -->
-
-
-
-
-
-     <script src="script.js"></script>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jersey+20&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
-</head>
-<body>
-     <header>
-        <nav>
-            <a href="#"><img src="images/logo.png"></a>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Agenda</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Our Sponsor</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-            <a href="#" class="registerbtn">Register Now</a>
-        </nav>
-     </header>
-     <div class="container">
-
-   
-<h1 class="section-title">For More Questions About</h1>
+<h1 class="section-title" id="contact">For More Questions About</h1>
  
 
 
  <div class="box">
     
-     <img src="C:\Users\Hp\ESMS-projet-\images\logo.png" alt="kiko" >
-    <img src="C:\Users\Hp\ESMS-projet-\images\background.png" alt="Une belle image">
-    <img src="c:\Users\Hp\Downloads\csee logo png-02.png" alt="cse logo">
+    <img src="images/logo.png" alt="kiko" >
+    <img src="images/background.png" alt="Une belle image">
+    <img src="images/logo (1).png" alt="cse logo">
     <h1>Contact Us</h1>
  <p> <span class="blanc">by email</span>
 <span class="orange">cse@esi.dz</span> 
 </p>
 <p>or on social media</p>
 
-    <img src="c:\Users\Hp\Downloads\social-media.png" alt="facebook" style="cursor: pointer; display: inline-block;" >
-<img src="c:\Users\Hp\Downloads\social-media (1).png" alt="insta" style="cursor: pointer; display: inline-block;">
-<img src="c:\Users\Hp\Downloads\social-media (2).png" alt="twiter" style="cursor: pointer; display: inline-block;">
-   <img src="c:\Users\Hp\Downloads\social-media (3).png" alt="ytb" style="cursor: pointer; display: inline-block;">
-   <img src="c:\Users\Hp\Downloads\social-media (4).png" alt="linkdin" style="cursor: pointer; display: inline-block;">
+    <img src="images/social-media (4).png" alt="facebook" style="cursor: pointer; display: inline-block;" >
+    <img src="images/social-media.png" alt="insta" style="cursor: pointer; display: inline-block;">
+    <img src="images/social-media (1).png" alt="twiter" style="cursor: pointer; display: inline-block;">
+   <img src="images/social-media (2).png" alt="ytb" style="cursor: pointer; display: inline-block;">
+   <img src="images/social-media (3).png" alt="linkdin" style="cursor: pointer; display: inline-block;">
  </div>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 
 
-    
-
-
-</div>
-
-
-
+     <script src="script.js"></script>
 </body>
->>>>>>> 73a5b170302604b1d637838c860080cb9b1f789d
 </html>
