adding registration form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#sponsors">Our Sponsor</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
-            <a href="#" class="registerbtn">Register Now</a>
+            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdlVe1WsMr-_MWz1HmisM85QGzGUpdSvUoHaaKnYjIkK3KVdw/viewform" class="registerbtn">Register Now</a>
         </nav>
      </header>
 
@@ -51,7 +51,7 @@
                   <i class="fa-solid fa-calendar-days"></i>
                         <span class="hero-description">29-31 JANVIER 2026</span>
                 </div>
-                   <a href="#" class="register-btn">
+                   <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdlVe1WsMr-_MWz1HmisM85QGzGUpdSvUoHaaKnYjIkK3KVdw/viewform" class="register-btn">
                        Register Now
                         <svg class="icon" viewBox="0 0 24 24">
                           <path d="M14 3h7v7h-2V6.41l-9.29 9.29-1.42-1.42L17.59 5H14V3z"/>
